--- a/index.html
+++ b/index.html
@@ -33,7 +33,9 @@
             <div class="container">
                 <div class="contents">
                     <h1 class="content-h1">Coffee Makes Mood...</h1>
-                    <p class="p">"Indulge in every sip:Experience the Richness of Coffee!"</p>  
+                    <p class="p">"Indulge in every sip:Experience the Richness of Coffee!"</p>
+                    <button class="btn-1">Taste Coffee</button>  
+                    <button class="btn-2">Learn More</button>
                 </div>
                 <div class="image-section">
                     <img src="/Coffee.jpg" class="feature-img">
@@ -87,7 +89,7 @@
                 <div class="pra"></div>
                 <p> "Welcome to the heart and soul of coffee passion-Coffee plug.By brewing a story of
                     perfection in every cup" </p>
-                    <a  href="#">@jeffBezoss</a>
+                 <p>  <a  href="#">@jeffBezoss</a>  </p> 
                 </p>
             </div>
             <div class="card">
@@ -95,7 +97,7 @@
                 <p>"Discover a world of taste with us.Each cup is a masterpeice,
                     join us in celeberating coffee at its finest".
                 </p>
-                    <a href="#">@valkraidy</a>
+                <p>   <a href="#">@valkraidy</a>   </p> 
         
                 </p>
             </div>
