still in progress

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                                    <!--Service Section Start-->
        <div class="service">
         <div class="title">
-            <h2>Reviews ☕</h2>
+            <h2>Reviews <img src="/takeaway-cup.png" alt="" height="60px"> </h2>
 
         </div>
         <h4 class="subtitle">What  other  people   are  saying!!!</h4>
@@ -117,9 +117,7 @@
             <p class="send">Send us a message</p>
             <form action="text">
                
-                <input type="text"  class="Full-name" placeholder="Full name">
-                <br>
-                <br>
+                
 
                 <input type="text" class="email" placeholder="Your email">
                 <br>
