Ready to start with the about section

--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
                         <div class="navli">
                             <a href="#" class="navli">Home</a>
                             <a href="readmore.html" class="navli">About</a>
-                            <a href="#" class="navli">Contact us</a>
-                            <a href="#" class="navli">Reviews</a>
+                            <a href="#footerr" class="navli">Contact us</a>
+                            <a href="#ttitle" class="navli">Reviews</a>
                         </div>
                        <a href="signup.html" class="up">Sign up</a>
                         <a href="login.html" class="in">Log in</a>
@@ -62,12 +62,12 @@
                                             <button type="button"  > Read more </button>
                                         </a>
                                         </div>
-                                    </div>
+                                 </div>
                                 
-                                </section>
+              </section>
                                    <!--Service Section Start-->
        <div class="service">
-        <div class="title">
+        <div id="ttitle">
             <h2>Reviews <img src="/takeaway-cup.png" alt="" height="60px"> </h2>
 
         </div>
@@ -109,7 +109,7 @@
 
                 <!--footer start-->
              <footer>
-            <div class="footer">
+            <div id="footerr">
 
           <div class="contact">
             <div class="us">
