worked on the images

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     <!--About section start-->
             <section class="about">
                 <div class="main">
-                    <img src="Cof.jpg"  height="100px" class="pic">
+                    <img src="focc.jpg"  height="100px" class="pic">
                         <div class="about-text">
                             <h2>Discover Coffee Plug!</h2>
                                             <h4>Elevating Your Coffee Experience.</h4>
